--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-  <button>
-    Tarefas
-    <link href="tarefas/index.html">
-  </button>
+  <a href="tarefas/index.html">
+    <button>
+      Tarefas
+    </button>
+  </a>
 </body>
 </html>
