--- a/tarefas/index.html
+++ b/tarefas/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-  <button>
-    ATIVIDADE_DE_PROJETO_DE_VIDA
-    <link href="ATIVIDADE_DE_PROJETO_DE_VIDA/tarefas.html">
-  </button>
+  <a href="ATIVIDADE_DE_PROJETO_DE_VIDA/tarefa.html">
+    <button>
+      ATIVIDADE_DE_PROJETO_DE_VIDA
+    </button>
+  </a>
 </body>
 </html>
