--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 </head>
 <body>
 
-  <a href="tarefa/">
-    <button>
-      Tarefas
-    </button>
-  </a>
+  <a href="tarefa/" class="buttonClass">Tarefas</a>
 </body>
 </html>
